--- a/Home/index.html
+++ b/Home/index.html
@@ -8,9 +8,14 @@
     <title>Robert Rupp's Portfolio</title>
 </head>
 <body>
-    
+    <h1>The Portfolio of Robert Rupp</h1>
+    <h3>About Me</h3>
+    <h3>Experience</h3>
+    <h3>Projects</h3>
+    <h3>Education</h3>
+    <h4>Contact Me</h4>
+    <h4>Leave a Question</h4>
     <footer>
-
     </footer>
 </body>
 </html>
